--- a/springcloud-config-client.yml
+++ b/springcloud-config-client.yml
@@ -6,13 +6,13 @@ spring:
 server:
     port: 8201
 spring:
-    profiles: dex
+    profiles: dev
     application:
          name: springcloud-config-client
 eureka:
     client:
         service-url:
-             defalutZone: http://eureka-dev.com:7001/eureka/
+             defaultZone: http://eureka-dev.com:7001/eureka/
 ---
 server:
     port: 8202
