--- a/springcloud-config-client.yml
+++ b/springcloud-config-client.yml
@@ -12,7 +12,7 @@ spring:
 eureka:
     client:
         service-url:
-             defaultZone: http://eureka-dev.com:7001/eureka/
+             defaultZone: http://eureka7001.com:7001/eureka/
 ---
 server:
     port: 8202
